<resources>
    <string name="app_name">App Test</string>

    <string name="broadcast_receiver">Broadcast Receiver</string>
    <string name="activity_lifecycle">Activity Lifecycle</string>
    <string name="intent">Intent</string>
    <string name="task_and_back_stack">Task and Back Stack</string>
    <string name="user_interface">User Interface</string>
    <string name="resources">Resources</string>
    <string name="database">Database</string>
    <string name="networking">Networking</string>
    <string name="share_preference">Share Preference</string>

    <string name="button_next">Next</string>
    <string name="button_finish">Finish</string>
    <string name="button_send_custom_broadcast">Send Custom Broadcast</string>
    <string name="button_open_link_in_browser">Open Link in Browser</string>
    <string name="button_call_phone">Call Phone</string>
    <string name="button_share_content">Share Content</string>
    <string name="button_open_in_map_view">Open in Map View</string>
    <string name="button_take_picture">Take Picture</string>
    <string name="button_pick_image_from_gallery">Pick Image from Gallery</string>
    <string name="button_go_to_activity_one">Activity One (Single Top)</string>
    <string name="button_go_to_activity_two">Activity Two (Default)</string>
    <string name="button_activity_three_single_task">Activity Three (Single Task)</string>
    <string name="button_activity_four_single_instance">Activity Four (Single Instance)</string>
    <string name="button_activity_five_flag_new_task">Activity Five (Flag New Task)</string>
    <string name="button_activity_six_affinities">Activity Six (Affinities)</string>
    <string name="button_basic_view">Basic Views</string>
    <string name="button_layouts">Layouts</string>
    <string name="button_constraint_layout">Constraint Layout</string>
    <string name="button_animate">Animate</string>
    <string name="button_dialogs">Dialogs</string>
    <string name="button_sheets">Sheets</string>
    <string name="button_fragments">Fragments</string>
    <string name="button_drawer">Drawer</string>
    <string name="button_tab">Tabs</string>
    <string name="button_language_change">Language Change</string>
    <string name="button_theme_change">Theme Change</string>
    <string name="button_about_us">About Us</string>
    <string name="button_listview">Listview</string>
    <string name="button_recyclerview">Recyclerview</string>">

    <string name="menu_all_mail">All mail</string>
    <string name="menu_title_main">Main</string>
    <string name="menu_inbox">Inbox</string>
    <string name="menu_sent">Sent</string>
    <string name="menu_draft">Drafts</string>
    <string name="menu_spam">Spam</string>
    <string name="menu_trash">Trash</string>
    <string name="menu_title_others">Others</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_support">Support</string>
    <string name="menu_about">About Us</string>
    <string name="menu_home">Home</string>">
    <string name="menu_notifications">Notifications</string>

    <string name="tab_home">Home</string>
    <string name="tab_notifications">Notifications</string>
    <string name="tab_settings">Settings</string>

    <string name="hint_value_one">Value One</string>
    <string name="hint_value_two">Value Two</string>

    <string name="label_result">Result</string>
    <string name="label_resource_subtitle">Android resources will be testing in this page.</string>
    <string name="label_string_resource">String Resources</string>
    <string name="label_dynamic_string">%1$s has %4$d %2$s and %5$d %3$s.</string>
    <string name="label_localized_string">This is a localized string.</string>

    <string name="affinity_calculation">affinity.calculation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_save">Save</string>
</resources>