<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/all_mail"
            android:checked="true"
            android:icon="@drawable/ic_mail"
            android:title="@string/menu_all_mail" />
        <item
            android:id="@+id/inbox"
            android:title="@string/menu_inbox" />
        <item
            android:id="@+id/sent"
            android:title="@string/menu_sent" />
        <item
            android:id="@+id/draft"
            android:title="@string/menu_draft" />
        <item
            android:id="@+id/spam"
            android:title="@string/menu_spam" />
        <item
            android:id="@+id/trash"
            android:title="@string/menu_trash" />
    </group>

    <group
        android:id="@+id/group_others"
        android:checkableBehavior="single">
        <item android:title="@string/menu_title_others">
            <menu>
                <item
                    android:id="@+id/settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/menu_settings" />
                <item
                    android:id="@+id/support"
                    android:title="@string/menu_support" />
                <item
                    android:id="@+id/about"
                    android:title="@string/menu_about" />
            </menu>
        </item>
    </group>

</menu>